--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/footer/Footer.astro";
 import Navbar from "../components/Navbar.astro";
 
 interface Props {
@@ -19,7 +20,13 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <!-- Navbar -->
     <Navbar />
+
+    <!-- Content -->
     <slot />
+
+    <!-- Footer -->
+    <Footer />
   </body>
 </html>
