--- a/src/components/cards/Product-Card.astro
+++ b/src/components/cards/Product-Card.astro
@@ -25,11 +25,14 @@ console.log(price, bathrooms, bedrooms, view);
   <h1 class="text-lg md:text-xl xl:text-2xl font-semibold">{title}</h1>
   <Paragraph text={description} className="line-clamp-2" />
 
-  <div class="flex justify-between items-center">
+  <div class="flex justify-between lg:justify-start 2xl:justify-between gap-y-2 lg:flex-col 2xl:flex-row">
+    <div>
+      <Paragraph text="Price"/>
+      <p class="font-semibold text-lg md:text-xl xl:text-2xl">${price}</p> 
+    </div>
     <Button
       text="View Property Details"
       isPurple
-      className="!w-full sm:!w-fit"
     />
   </div>
 </div>
