`Feat`: - Fix Image optimization

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -30,7 +30,7 @@ const listitems = [
 <div
   class="flex items-center px-6 justify-between md:px-10 lg:px-24 gap-x-10 h-[100px] bg-Grey/10"
 >
-  <Image src={Logo} alt="" width={160} height={48} />
+  <Image src={Logo} alt="Logo" width={160} height={48} loading="eager" />
   <ul class="lg:flex gap-x-8 items-center hidden">
     {
       listitems.map((item) => (
