--- a/src/components/hero/Home-Hero.astro
+++ b/src/components/hero/Home-Hero.astro
@@ -22,7 +22,7 @@ const cardData = [
   >
     <!-- Heading Secton -->
     <div class="flex flex-col gap-6">
-      <h1 class="text-white font-semibold xl:text-6xl lg:text-5xl text-3xl">
+      <h1 class="text-white font-semibold xl:text-6xl lg:text-5xl text-3xl">  
         Discover Your Dream Property with Estatein
       </h1>
       <p class="text-Grey/60 lx:text-lg lg:text-base text-sm font-medium">
@@ -53,9 +53,10 @@ const cardData = [
     <Image
       class="absolute -top-24 lg:top-20 lg:-right-20 lg:size-[160px] size-[117px]"
       src={HeroImage}
-      alt=""
+      alt="Hero"
       width={160}
       height={160}
+      loading="eager"
     />
   </Fram>
 
@@ -63,9 +64,10 @@ const cardData = [
   <div class="flex justify-end bg-Grey/10">
     <Image
       src={Hero}
-      alt=""
+      alt="Hero Main"
       width={920}
       height={814}
+      loading="eager"
     />
   </div>
 </div>
