`Feat`: - Create Contact Form - Create Input Component - Update Home

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -10,6 +10,7 @@ import Email from "./../../public/icons/email.svg";
 import Phone from "./../../public/icons/phone.svg";
 import Location from "./../../public/icons/location.svg";
 import HeadingParagraph from "../components/common/Heading-Paragraph.astro";
+import ContactForm from "../components/common/Contact-Form.astro";
 
 export const features = [
   {
@@ -48,5 +49,6 @@ export const features = [
       title="Let's Connect"
       description="We're excited to connect with you and learn more about your real estate goals. Use the form below to get in touch with Estatein. Whether you're a prospective client, partner, or simply curious about our services, we're here to answer your questions and provide the assistance you need."
     />
+    <ContactForm />
   </Fram>
 </Layout>
