--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -13,7 +13,7 @@ import { footerData } from "../../constant/footer";
   <SubFooter />
   <Fram className="!grid lg:grid-cols-4 py-[80px] gap-6">
     <div class="flex flex-col gap-y-6">
-      <Image alt={"Logo"} src={Logo} width={113} height={34} loading={'eager'}/>
+      <Image alt="Logo" src={Logo} width={113} height={34} loading='lazy'/>
       <SubscribeInput />
     </div>
     <div class="lg:col-span-3 grid grid-cols-2 gap-y-6 md:grid-cols-5">
