--- a/src/pages/properties.astro
+++ b/src/pages/properties.astro
@@ -1,7 +1,9 @@
 ---
+import ProductCard from "../components/cards/Product-Card.astro";
 import HeadingParagraph from "../components/common/Heading-Paragraph.astro";
 import Fram from "../components/Frame.astro";
 import SimpleHero from "../components/hero/Simple-Hero.astro";
+import { products } from "../constant/products";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -11,10 +13,35 @@ import Layout from "../layouts/Layout.astro";
     description="Welcome to Estatein, where your dream property awaits in every corner of our beautiful world. Explore our curated selection of properties, each offering a unique story and a chance to redefine your life. With categories to suit every dreamer, your journey"
   />
 
-  <Fram className="py-16">
-    <HeadingParagraph
+  <Fram className="py-16 space-y-20">
+    <div class="flex flex-col gap-y-6">
+      <HeadingParagraph
       title="Discover a World of Possibilities"
       description="Welcome to Estatein, where your dream property awaits in every corner of our beautiful world. Explore our curated selection of properties, each offering a unique story and a chance to redefine your life. With categories to suit every dreamer, your journey to finding your perfect home begins here."
-    />
+      />
+
+      <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+        {
+          products.map((product) => (
+            <ProductCard
+            title={product.title}
+            description={product.description}
+            price={product.price}
+            image={product.image}
+            bathrooms={product.bathrooms}
+            bedrooms={product.bedrooms}
+            view={product.view}
+          />
+        ))
+        }
+      </div>
+  </div>
+
+  <div class="flex flex-col gap-y-6">
+      <HeadingParagraph
+      title="Let's Make it Happen"
+      description="Ready to take the first step toward your dream property? Fill out the form below, and our real estate wizards will work their magic to find your perfect match. Don't wait; let's embark on this exciting journey together."
+      />
+  </div>
   </Fram>
 </Layout>
