`Feat`: - Create Property form with response

--- a/src/components/Inputs/Input.astro
+++ b/src/components/Inputs/Input.astro
@@ -1,19 +1,39 @@
 ---
 interface Props {
-    label?: string;
-    placeholder?: string;
-    type: string;
-    name?: string;
-    value?: string;
-    onChange?: (event: Event) => void;
-    error?: string;
-    touched?: boolean;
+  label?: string;
+  placeholder?: string;
+  type: string;
+  name?: string;
+  value?: string;
+  onChange?: (event: Event) => void;
+  error?: string;
+  touched?: boolean;
+  className?: string;
+  inputClass?: string;
+  disabled?: boolean;
 }
 
-const {label, placeholder, type, name, value, onChange } = Astro.props;
+const {
+  inputClass,
+  label,
+  placeholder,
+  className,
+  type,
+  name,
+  value,
+  onChange,
+  disabled,
+} = Astro.props;
 ---
 
-<label for={name} class="flex flex-col gap-y-2">
-    <span class="md:text-base text-sm font-semibold">{label}</span>
-    <input type={type as astroHTML.JSX.InputHTMLAttributes['type']} name={name} value={value} placeholder={placeholder} class="w-full border px-5 py-4 rounded-md border-Grey/15 bg-Grey/10 outline-none " />
+<label for={name} class={`flex flex-col gap-y-2 ${className}`}>
+  {label && <span class="md:text-base text-sm font-semibold">{label}</span>}
+  <input
+    type={type as astroHTML.JSX.InputHTMLAttributes["type"]}
+    name={name}
+    value={value}
+    placeholder={placeholder}
+    disabled={disabled}
+    class={`w-full border px-5 py-4 rounded-md border-Grey/15 bg-Grey/10 outline-none ${inputClass}`}
+  />
 </label>
