--- a/src/components/cards/Feature-Card.astro
+++ b/src/components/cards/Feature-Card.astro
@@ -18,6 +18,7 @@ const { icon, title } = Astro.props;
     width={200}
     height={200}
     class="size-12 sm:size-20"
+    loading={"eager"}
   />
   <p class="text-center text-sm lg:text-base xl:text-xl font-semibold">
     {title}
