--- a/src/components/common/Heading-Paragraph.astro
+++ b/src/components/common/Heading-Paragraph.astro
@@ -12,7 +12,7 @@ const { title, description } = Astro.props;
 ---
 
 <div class="flex flex-col gap-2">
-  <Image src={Stars} alt={title} width={68} height={30} />
+  <Image src={Stars} alt={title} width={68} height={30} loading={"lazy"} />
   <h2 class="xl:text-5xl md:text-4xl text-3xl font-semibold">{title}</h2>
   <Paragraph text={description} />
 </div>
