--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Footer from "../components/footer/Footer.astro";
 import Navbar from "../components/Navbar.astro";
+import "../styles/global.css";
 
 interface Props {
   title: string;
